--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,11 @@
 	text-rendering: optimizelegibility;
 
 	box-sizing: border-box;
+
+	accent-color: limegreen;
+	color-scheme: dark;
+
+	color: white;
 }
 
 *, *::before, *::after {
