--- a/src/components/input/template.html
+++ b/src/components/input/template.html
@@ -22,9 +22,9 @@
 			<line class="border outer-border block-border" id="outer-border-bottom"/>
 			<line class="border outer-border inline-border" id="outer-border-left"/>
 
-			<mask id="attention-marker-mask">
-				<rect x="0" y="0" width="100%" height="100%" fill="white" stroke="none"/>
-				<circle fill="black" stroke="none"/>
+			<mask id="attention-marker-mask" maskUnits="userSpaceOnUse">
+				<rect x="-10%" y="-10%" width="120%" height="120%" fill="white"/>
+				<circle/>
 			</mask>
 
 			<circle class="border inner-border marker" id="inner-attention-marker"/>
